k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xela-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ${APP_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: http
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              name: http
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              name: http
